--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+<script>
+    function search() {
+    //get input value
+    const input = document.getElementById('filter').value.toUpperCase();
+    const cardContainer = document.getElementById('card-lists');
+    //console.log(cardContainer);
+
+    const cards = cardContainer.getElementsByClassName('card');
+    //console.log(cards);
+
+
+    for(let i = 0; i < cards.length; i++){
+        let title = cards[i].querySelector(".card-body p.card-title");
+        //console.log(title);
+        //Check if input is similar to paragraph in the card
+        if(title.innerText.toUpperCase().indexOf(input) > -1){
+            cards[i].style.display = "";
+        } else {
+            cards[i].style.display = "none";
+        }
+    }
+}
+</script>
+
 <body>
     <header>
         
@@ -55,7 +79,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="img/1.jpg" alt="image">
+                    <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Luka Arellano</h5>
                         <p class="card-title">Specializes in general mental help and eating disorders.</p>
@@ -88,4 +112,30 @@
 
 
 </body>
+<style>
+    .card {
+    width:18rem;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(12, 16, 31, 0.4);
+    margin: 20px 40px;
+    
+
+}
+
+
+input{
+    border: 1px solid #333;
+    font-size: 18px;
+    padding: 12px 10px;
+    margin: 10px 0;
+    width: 100%;
+}
+
+h1{
+    background-color: #6BD1EF;
+    color: #0C576E;
+    height: 4rem;
+}
+
+</style>
 </html>
