fixed static files

--- a/templates/main.html
+++ b/templates/main.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="input-filter">
             <input type="text" name="" id="filter" class="filter" placeholder=
-            "Enter Title" onkeyup="search()">
+            "Search Keywords" onkeyup="search()">
         </div>
 
         <!--All of the cards for bootstrap-->
@@ -51,7 +51,7 @@
         <div class="card-lists" id="card-lists">  
             <div class="row">
                 <div class="card">
-                    <img src="img/1.jpg" alt="image">
+                    <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Jake Bourne</h5>
                         <p class="card-title">Specializes in anxiety and depression</p>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="img/1.jpg" alt="image">
+                    <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Darin Moody</h5>
                         <p class="card-title">Specializes in suicide and depression</p>
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="img/1.jpg" alt="image">
+                    <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Beth Black</h5>
                         <p class="card-title">Specializes in violence help, harassments and phobias</p>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="img/1.jpg" alt="image">
+                    <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">John McCallum</h5>
                         <p class="card-title">Specializes in anxiety, depression, harassments and suicide</p>
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="img/1.jpg" alt="image">
+                    <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Damian Russ</h5>
                         <p class="card-title">Specializes in depression and eating disorders</p>
@@ -137,5 +137,9 @@ h1{
     height: 4rem;
 }
 
+.card{
+    display: flex;
+    flex-grow: 4;
+}
 </style>
 </html>
