--- a/templates/main.html
+++ b/templates/main.html
@@ -30,14 +30,11 @@
         }
     }
 }
+
 </script>
 
 <body>
-    <header>
-        
-    <h1 class="text-black text-center">Hear4Me Therapists</h1>
-    </header>
-
+    <div><img src = "static/img/Hear4me_logo.png" alt="" class="center"></div>
         <!--Therapists searchbar-->
 
     <div class="container">
@@ -54,6 +51,7 @@
                     <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Jake Bourne</h5>
+                        <h6 class="card-title">Tel Aviv</h6>
                         <p class="card-title">Specializes in anxiety and depression</p>
                         <p class="card-title">Email: jake.bourne@gmail.com<br>Phone: 0982429834</p>
 
@@ -64,6 +62,7 @@
                     <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Darin Moody</h5>
+                        <h6 class="card-title">Jerusalem</h6>
                         <p class="card-title">Specializes in suicide and depression</p>
                         <p class="card-title">Email: darin.moody@gmail.com<br>Phone: 0988327234</p>
                     </div>
@@ -73,6 +72,7 @@
                     <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Beth Black</h5>
+                        <h6 class="card-title">Tel Aviv</h6>
                         <p class="card-title">Specializes in violence help, harassments and phobias</p>
                         <p class="card-title">Email: beth.black@gmail.com<br>Phone: 0283764464</p>
                     </div>
@@ -82,6 +82,7 @@
                     <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Luka Arellano</h5>
+                        <h6 class="card-title">Haifa</h6>
                         <p class="card-title">Specializes in general mental help and eating disorders.</p>
                         <p class="card-title">Email: luka.arellano@gmail.com<br>Phone: 0293864834</p>
                     </div>
@@ -91,6 +92,7 @@
                     <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">John McCallum</h5>
+                        <h6 class="card-title">Tel Aviv</h6>
                         <p class="card-title">Specializes in anxiety, depression, harassments and suicide</p>
                         <p class="card-title">Email: john.mccallum@gmail.com<br>Phone: 0938746334</p>
                     </div>
@@ -100,6 +102,7 @@
                     <img src="static/img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Damian Russ</h5>
+                        <h6 class="card-title">Nazareth</h6>
                         <p class="card-title">Specializes in depression and eating disorders</p>
                         <p class="card-title">Email: Damian.russ@gmail.com<br>Phone: 0529387894</p>
                     </div>
@@ -139,7 +142,13 @@ h1{
 
 .card{
     display: flex;
-    flex-grow: 4;
+    flex-grow: 2;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20rem;
 }
 </style>
 </html>
